<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/text_home"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:textSize="10sp" />
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:orientation="vertical">
        <TextView
            android:text="Weekly"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            <ImageButton
                android:id="@+id/btn_mon"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"/>
            <ImageButton
                android:id="@+id/btn_tue"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/btn_wed"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/btn_thu"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/btn_fri"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/btn_sat"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
            <ImageButton
                android:id="@+id/btn_sun"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/btn_start"
            android:text="@string/btn_start"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/btn_howTo"
            android:text="@string/btn_howTo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/btn_newRoutine"
            android:text="@string/btn_newRoutine"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="100dp">
        <Button
            android:id="@+id/btn_programs"
            android:text="@string/btn_programs"
            android:layout_width="match_parent"
            android:layout_height="match_parent"/>
    </LinearLayout>

</LinearLayout>